force-app/main/default/objects/Xpedeon_Sync_Delegate__c/Xpedeon_Sync_Delegate__c.object-meta.xml
<CustomObject>
    <label>Xpedeon Sync Delegate</label>
    <nameField>
        <displayFormat>XSD-{0000}</displayFormat>
        <label>Xpedeon Sync Delegate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xpedeon Sync Delegates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>