force-app/main/default/objects/Xpedeon_Sync_Delegate__c/fields/Applicant_Details__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Details</label>
    <referenceTo>Applicant_Details__c</referenceTo>
    <relationshipLabel>Xpedeon Sync Delegates</relationshipLabel>
    <relationshipName>Xpedeon_Sync_Delegates</relationshipName>
    <type>Lookup</type>
</CustomField>