force-app/main/default/objects/Xpedeon_Sync_Delegate__c/fields/Demand__c.field-meta.xml
<CustomField>
    <fullName>Demand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demand</label>
    <referenceTo>Demand__c</referenceTo>
    <relationshipLabel>Xpedeon Sync Delegates</relationshipLabel>
    <relationshipName>Xpedeon_Sync_Delegates</relationshipName>
    <type>Lookup</type>
</CustomField>