force-app/main/default/objects/Xpedeon_Sync_Delegate__c/fields/Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Request</label>
    <referenceTo>Payment_Request__c</referenceTo>
    <relationshipLabel>Xpedeon Sync Delegates</relationshipLabel>
    <relationshipName>Xpedeon_Sync_Delegates</relationshipName>
    <type>Lookup</type>
</CustomField>