force-app/main/default/objects/Xpedeon_Sync_Delegate__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Xpedeon Sync Delegates</relationshipLabel>
    <relationshipName>Xpedeon_Sync_Delegates</relationshipName>
    <type>Lookup</type>
</CustomField>