force-app/main/default/objects/Xpedeon_Sync_Delegate__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Xpedeon Sync Delegates</relationshipLabel>
    <relationshipName>Xpedeon_Sync_Delegates</relationshipName>
    <type>Lookup</type>
</CustomField>